# dx_icons

./: Cargo.toml  README.md  dx_icons_spec.md  llms.txt
crates/dx_icons/: Cargo.toml
crates/dx_icons/src/: lib.rs
crates/dx_icons_feather/: Cargo.toml  build.rs
crates/dx_icons_feather/src/: lib.rs
crates/dx_icons_heroicons/: Cargo.toml  build.rs  heroicons_outline.json  heroicons_solid.json
crates/dx_icons_heroicons/src/: lib.rs
crates/dx_icons_lucide/: Cargo.toml  build.rs  icons.json
crates/dx_icons_lucide/src/: lib.rs
crates/dx_icons_simple/: Cargo.toml  LICENSE  build.rs
crates/dx_icons_simple/src/: lib.rs
crates/dx_icons_tabler/: Cargo.toml  build.rs  icons.json
crates/dx_icons_tabler/src/: lib.rs
scripts/: convert_heroicons.py  convert_lucide.js  convert_simple.js  convert_tabler.js
