[package]
name = "dx_icons_feather"
version = "0.1.0"
edition = "2024"
description = "Feather Icons as native Dioxus 0.7 components"
license = "MIT"
repository = "https://github.com/nick-friedrich/dx_icons"
keywords = ["dioxus", "icons", "svg", "feather", "components"]
categories = ["gui", "web-programming"]
include = ["src/**/*", "build.rs", "icons.json", "Cargo.toml", "LICENSE"]

[dependencies]
dioxus.workspace = true

[build-dependencies]
serde_json.workspace = true
