[package]
name = "dx_icons_simple"
version = "0.1.0"
edition = "2024"
description = "Simple Icons (brand logos) as native Dioxus 0.7 components"
license = "MIT"
repository = "https://github.com/nick-friedrich/dx_icons"
keywords = ["dioxus", "icons", "svg", "brands", "components"]
categories = ["gui", "web-programming"]
include = ["src/**/*", "build.rs", "icons.json", "Cargo.toml", "LICENSE"]

[dependencies]
dioxus.workspace = true

[build-dependencies]
serde_json.workspace = true
